--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ p {
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
-    margin-bottom: 30px;
 }
 .btn {
     font-weight: 400;
@@ -43,6 +42,7 @@ p {
     display: inline-block;
     border: none;
     cursor: pointer;
+    margin-top: 30px;
 }
 .info {
     color: #0F4C92;
@@ -65,4 +65,73 @@ h2 {
     line-height: 22px;
     max-width: 745px;
     margin: 0 auto;
+}
+.advantages_blocks {
+    padding: 80px 0 20px;
+    max-width: 1196px;
+    margin: 0 auto;
+}
+.advantage_block {
+    display: flex;
+    margin-bottom: 80px;
+}
+.advantage_block:nth-child(2) .advantage_img {
+    order: 1;
+}
+.advantage_img {
+    border-radius: 10px;
+}
+.advantage_description {
+    padding-left: 80px;
+    padding-top: 65px;
+}
+.advantage_block:nth-child(2) .advantage_description {
+    padding-right: 80px;
+    padding-left: 0;
+}
+h4 {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 30px;
+    color: #0F4C92;
+    margin-bottom: 20px;
+}
+.date {
+    font-size: 20px;
+    line-height: 23px;
+    color: #1B1B1B;
+    margin-bottom: 40px;
+}
+span {
+    font-weight: 700;
+}
+.advantage_block .description {
+    line-height: 26px;
+}
+.more_info {
+    display: inline-block;
+    padding: 16px 70px;
+    background-color: #0d599c;
+    border-radius: 95px;
+    color: #ffffff;
+    margin-top: 40px;
+    text-decoration: none;
+    font-size: 21px;
+    line-height: 25px;
+    text-align: center;
+}
+.order {
+    padding: 97px 0;
+}
+.to_form {
+    width: 785px;
+    margin: 0 auto;
+    padding: 60px 60px 30px;
+    background-color: #2b477c;
+    color: #f0f0f0;
+    border-radius: 19px;
+    text-align: center;
+}
+.to_form h2 {
+    color: inherit;
 }
